--- a/RexReplace.csproj
+++ b/RexReplace.csproj
@@ -140,6 +140,7 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="help.txt">
